--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -44,3 +44,19 @@
   background-color: #8a2b06;
   color: white;
 }
+
+@media (max-width: 35rem) {
+  .total {
+    font-size: 1rem;
+  }
+  .actions {
+    text-align: center;
+  }
+  .actions button {
+    font-size: 0.8rem;
+    padding: 0.3rem 1rem;
+  }
+  p {
+    font-size: 0.8rem;
+  }
+}
