--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -57,3 +57,19 @@
     transform: scale(1);
   }
 }
+
+@media (max-width: 35rem) {
+  .button {
+    font-size: 0.6rem;
+    padding: 0.75rem 0.6rem;
+  }
+  .icon {
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.5rem;
+  }
+  .badge {
+    padding: 0.25rem 0.6rem;
+    margin-left: 0.6rem;
+  }
+}
