--- a/src/components/Meals/MealItem/MealItem.module.css
+++ b/src/components/Meals/MealItem/MealItem.module.css
@@ -20,3 +20,12 @@
   color: #ad5502;
   font-size: 1.25rem;
 }
+
+@media (max-width: 35rem) {
+  .meal h3 {
+    font-size: 1rem;
+  }
+  .description {
+    font-size: 0.8rem;
+  }
+}
