--- a/src/components/Meals/MealItem/MealItemForm.module.css
+++ b/src/components/Meals/MealItem/MealItemForm.module.css
@@ -18,3 +18,13 @@
   background-color: #641e03;
   border-color: #641e03;
 }
+
+@media (max-width: 35rem) {
+  .form {
+    margin-left: 0.6rem;
+  }
+  .form button {
+    font-size: 0.6rem;
+    padding: 0.25rem 1rem;
+  }
+}
